# SFXDLeBot

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-build.yml
bot/: __main__.py  bot.py  config.py  config.yml
bot/cogs/: CogManager.py  birb.py  bitcoin.py  finvizcrypto.py  gearset.py  image.py  joke.py  sfstatus.py  stonk.py  weather.py
bot/utils/: errorhandler.py  functions.py  imageutils.py  stonkchart.py
