[tool.poetry]
name = "sfxdlebot"
version = "0.0.1"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.3.2"
pyyaml = "^5.3.1"
validators = "^0.18.0"
cairosvg = "^2.4.2"
drawSvg = "^1.6.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
